objects/OrderServiceRelationship__mdt.object
<CustomObject>
    <fields>
        <fullName>DestinationProductCode__c</fullName>
        <label>DestinationProductCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationProductId__c</fullName>
        <label>DestinationProductId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceProductCode__c</fullName>
        <label>SourceProductCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationshipType__c</fullName>
        <label>relationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MigratesTo</fullName>
                </value>
                <value>
                    <fullName>MigratesFrom</fullName>
                </value>
                <value>
                    <fullName>DependsOn</fullName>
                </value>
                <value>
                    <fullName>Bundles</fullName>
                </value>
                <value>
                    <fullName>BundledBy</fullName>
                </value>
                <value>
                    <fullName>Enables</fullName>
                </value>
                <value>
                    <fullName>Root</fullName>
                </value>
                <value>
                    <fullName>ReliesOn</fullName>
                    <default>true</default>
                    <label>ReliesOn</label>
                </value>
                <value>
                    <fullName>HostedOn</fullName>
                </value>
                <value>
                    <fullName>ConnectsOn</fullName>
                </value>
                <value>
                    <fullName>AttachesTo</fullName>
                </value>
                <value>
                    <fullName>RoutesTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OrderServiceRelationship</label>
    <pluralLabel>OrderServiceRelationships</pluralLabel>
</CustomObject>